:wolf: Fix preview arrow on firefox

--- a/styles/graphic.sass
+++ b/styles/graphic.sass
@@ -154,7 +154,6 @@
   .preview-line
     opacity: 0
     stroke: #aaaaaa
-    marker-end: url(#preview-arrow)
 
   &:hover .preview-line
     opacity: 1
